// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange transaction service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "amount": "0.0001",
    "buyMatcherFee": "0.01",
    "fee": "0.001",
    "height": 435197,
    "id": "FU5mCVTaa83TPMx4fj1F7bL6ZAfpMKcPpDDvhvxCD557",
    "order1": Object {
      "amount": "0.0001",
      "assetPair": Object {
        "amountAsset": "8LQW8f7P5d5PZM7GtZEBgaqRPGSzS3DfPuiXrURJ4AJS",
        "priceAsset": "WAVES",
      },
      "expiration": 2017-04-05T01:19:52.031Z,
      "id": "LGzcHf1Pq9ZTfF4kQ4PdXyCuBuMRy9ksKxzDxkn9Js9",
      "matcherFee": "0.01",
      "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
      "orderType": "buy",
      "price": "0.3",
      "sender": "3PJUhtX97wj2nCGmN8tYWQ9e9FAu6wVsqQL",
      "senderPublicKey": "CHnZGZ8QBjeDTeaPqg8zirAR8wB6xfAap8echHrLz2Zw",
      "signature": "5odnp8FcvrsPjQEM7d6bKcEYBVKRKmw526WAruaQtwJUS1i92GU8DXY4p7y4nP1ae7ktbEo7Wbm4XVVxuvadcsuT",
      "timestamp": 2017-04-03T01:19:52.031Z,
    },
    "order2": Object {
      "amount": "0.0001",
      "assetPair": Object {
        "amountAsset": "8LQW8f7P5d5PZM7GtZEBgaqRPGSzS3DfPuiXrURJ4AJS",
        "priceAsset": "WAVES",
      },
      "expiration": 2017-04-05T01:19:35.756Z,
      "id": "3PwJzq7N5KhsfLwnKFxwvpNGfqhqPNiAry8ZirPBP8aT",
      "matcherFee": "0.01",
      "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
      "orderType": "sell",
      "price": "0.3",
      "sender": "3PC7nLe5w5JfjicofJaHzD6sH7ZF8GtdnQp",
      "senderPublicKey": "7TGcKbAEnxWEfL9ymyRFCjf7MLnqiTWTF8Nr526qV5gz",
      "signature": "23oQi7T47j8dmJiv9vMUt4SJYv83s7TVm6x1or7bCU11KHAoi8zCDhjxPGkm3JcEEvytyp5y1wVRewpZ1E3RxsLQ",
      "timestamp": 2017-04-03T01:19:35.756Z,
    },
    "price": "0.3",
    "sellMatcherFee": "0.01",
    "sender": "3PLabmVKpBGibMMMJcM1dwS3F17MF6Pf6Xf",
    "senderPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
    "signature": "AhSqQoFBtEiJjXZWPsZ8zLTRj5aycU4oqtr2vKnBJ56xwce161MxPUuRZFfFgYpLNMhTqe7me3F8LfpoarBLMdP",
    "timestamp": 2017-04-03T01:19:53.952Z,
    "type": 7,
  },
}
`;

exports[`Exchange transaction service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "0.0001",
        "buyMatcherFee": "0.01",
        "fee": "0.001",
        "height": 435197,
        "id": "FU5mCVTaa83TPMx4fj1F7bL6ZAfpMKcPpDDvhvxCD557",
        "order1": Object {
          "amount": "0.0001",
          "assetPair": Object {
            "amountAsset": "8LQW8f7P5d5PZM7GtZEBgaqRPGSzS3DfPuiXrURJ4AJS",
            "priceAsset": "WAVES",
          },
          "expiration": 2017-04-05T01:19:52.031Z,
          "id": "LGzcHf1Pq9ZTfF4kQ4PdXyCuBuMRy9ksKxzDxkn9Js9",
          "matcherFee": "0.01",
          "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
          "orderType": "buy",
          "price": "0.3",
          "sender": "3PJUhtX97wj2nCGmN8tYWQ9e9FAu6wVsqQL",
          "senderPublicKey": "CHnZGZ8QBjeDTeaPqg8zirAR8wB6xfAap8echHrLz2Zw",
          "signature": "5odnp8FcvrsPjQEM7d6bKcEYBVKRKmw526WAruaQtwJUS1i92GU8DXY4p7y4nP1ae7ktbEo7Wbm4XVVxuvadcsuT",
          "timestamp": 2017-04-03T01:19:52.031Z,
        },
        "order2": Object {
          "amount": "0.0001",
          "assetPair": Object {
            "amountAsset": "8LQW8f7P5d5PZM7GtZEBgaqRPGSzS3DfPuiXrURJ4AJS",
            "priceAsset": "WAVES",
          },
          "expiration": 2017-04-05T01:19:35.756Z,
          "id": "3PwJzq7N5KhsfLwnKFxwvpNGfqhqPNiAry8ZirPBP8aT",
          "matcherFee": "0.01",
          "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
          "orderType": "sell",
          "price": "0.3",
          "sender": "3PC7nLe5w5JfjicofJaHzD6sH7ZF8GtdnQp",
          "senderPublicKey": "7TGcKbAEnxWEfL9ymyRFCjf7MLnqiTWTF8Nr526qV5gz",
          "signature": "23oQi7T47j8dmJiv9vMUt4SJYv83s7TVm6x1or7bCU11KHAoi8zCDhjxPGkm3JcEEvytyp5y1wVRewpZ1E3RxsLQ",
          "timestamp": 2017-04-03T01:19:35.756Z,
        },
        "price": "0.3",
        "sellMatcherFee": "0.01",
        "sender": "3PLabmVKpBGibMMMJcM1dwS3F17MF6Pf6Xf",
        "senderPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
        "signature": "AhSqQoFBtEiJjXZWPsZ8zLTRj5aycU4oqtr2vKnBJ56xwce161MxPUuRZFfFgYpLNMhTqe7me3F8LfpoarBLMdP",
        "timestamp": 2017-04-03T01:19:53.952Z,
        "type": 7,
      },
    },
    null,
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "1000",
        "buyMatcherFee": "0.001",
        "fee": "0.001",
        "height": 435226,
        "id": "4ZXpBjWJRFWaJhq9P2WUgW7N7F5h1poeJyQSfBpJuwfb",
        "order1": Object {
          "amount": "1000",
          "assetPair": Object {
            "amountAsset": "AnERqFRffNVrCbviXbDEdzrU6ipXCP5Y1PKpFdRnyQAy",
            "priceAsset": "WAVES",
          },
          "expiration": 2017-05-03T01:49:41.493Z,
          "id": "5W4vq1FMuWhpVtbR1zYDS94gKmnaPUo5EJLQprEuabPE",
          "matcherFee": "0.001",
          "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
          "orderType": "buy",
          "price": "0.01",
          "sender": "3PJUhtX97wj2nCGmN8tYWQ9e9FAu6wVsqQL",
          "senderPublicKey": "CHnZGZ8QBjeDTeaPqg8zirAR8wB6xfAap8echHrLz2Zw",
          "signature": "pya3Q2ToufjKx3pEKfZZQY2pseFxS9Md1p3muRTNrLBbSyBFZx9CtDJJEr8w7h9Q785RFzYUwvZmGgUsqf1V2rm",
          "timestamp": 2017-04-03T01:49:41.493Z,
        },
        "order2": Object {
          "amount": "1000",
          "assetPair": Object {
            "amountAsset": "AnERqFRffNVrCbviXbDEdzrU6ipXCP5Y1PKpFdRnyQAy",
            "priceAsset": "WAVES",
          },
          "expiration": 2017-05-03T01:49:32.461Z,
          "id": "8GHeA16FsaBLpuq4tu5cxfRDBAhhHyntbfhY3vTikzmE",
          "matcherFee": "0.001",
          "matcherPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
          "orderType": "sell",
          "price": "0.01",
          "sender": "3PC7nLe5w5JfjicofJaHzD6sH7ZF8GtdnQp",
          "senderPublicKey": "7TGcKbAEnxWEfL9ymyRFCjf7MLnqiTWTF8Nr526qV5gz",
          "signature": "557FHuHScvYZB5q3ePV5hZa8QxTnM73BiBn5hVw7yF4nHGgC3u6hQjKsEfenSNchLZhh573PMJzQnD3bdqvGCFFS",
          "timestamp": 2017-04-03T01:49:32.461Z,
        },
        "price": "0.01",
        "sellMatcherFee": "0.001",
        "sender": "3PLabmVKpBGibMMMJcM1dwS3F17MF6Pf6Xf",
        "senderPublicKey": "GoVxp9iFXvDhGFUYG4fZ4GU3yQDsxyti8f3D5tNYiAXX",
        "signature": "5TVru2nrRuLatmyXXJin1HzotUEjZ1umsc98zM35teQfd91oK1EQcFuK2ajWfsJyv5GmyGYvQypgvkLaFzyL1gow",
        "timestamp": 2017-04-03T01:49:42.898Z,
        "type": 7,
      },
    },
  ],
}
`;
